--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,30 @@ img {
     text-align: center;
 }
 
+a:focus {
+    outline: 3px solid #000;
+}
+
+.skip-links {
+    margin:0;
+    padding:0;
+    list-style-type: none;
+}
+
+.skip-links a {
+    position: absolute;
+    top: -3em;
+    background-color: #000;
+    color: #FFF;
+    padding: 0.5e, 0.75em;
+    font-weight: bold;
+    text-align: none;
+}
+
+.skip-links a:focus {
+    top: 0;
+}
+
 .intro {
    background-color: #E2E2E2;
     text-align:center;
