--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,10 @@ img {
     text-align: center;
 }
 
+.subhead {
+    text-align:center;
+} 
+
 a:focus {
     outline: 3px solid #000;
 }
@@ -87,6 +91,10 @@ a:focus {
 .intro {
    background-color: #E2E2E2;
     text-align:center;
+}
+
+.grey {
+    background-color: #E2E2E2;
 }
 
 .characteristics {
@@ -120,6 +128,50 @@ a:focus {
     text-decoration: none;
 }
 
+.button {
+    text-align: center;
+}
+
+label {
+    display: block;
+}
+
+input + label {
+    display: inline-block;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="email"] { 
+    border: 1px solid #e2e2e2;
+    border-radius: 3px;
+    font-size: 1.125em;
+    font-family: serif;
+    background-color: white;
+    padding: 0.5em;
+    width: 100%;
+}
+
+form {
+    max-width: 30em;
+    margin: 0 auto;
+}
+
+textarea {
+    width:100%;
+    height: 15em;
+}
+
+.awesomeness {
+    margin: 0.5em;
+    padding: 0;
+}
+
+button {
+    font-size: 1.25em;
+    text-align: center;
+    
+}
 @media only screen and (min-width: 25em) {
 
     .nav li {
