--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ html {
   padding: 0;
   box-sizing: border-box;
 
-  font: normal 100%/1.5 sans-serif;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -58,6 +57,16 @@ img {
     margin: 0;
     padding: 0;
     text-align: center;
+    font-size: 3em;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: white;
 }
 
 .subhead {
@@ -89,29 +98,38 @@ a:focus {
 }
 
 .intro {
-   background-color: #E2E2E2;
+   background-color: #dfe4e5;
     text-align:center;
 }
 
 .grey {
-    background-color: #E2E2E2;
+    background-color: #edefef;
 }
 
 .characteristics {
-    background-color: #e2e2e2;
+    background-color: #dfe4e5;
 }
 
 .pictures {
-    background-color: #efefef;
+    background-color: #edefef;
 }
 
 .masthead {
-    background-color: #ccc;
+    background-color: #bbc5c8;
     overflow: hidden;
 }
 
 .discovery {
-    background-color: #e2e2e2;
+    background-color: #dfe4e5;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: white;
 }
 
 .nav {
@@ -122,11 +140,24 @@ a:focus {
     margin: 0;
 }
 
-.nav a {
+.nav a,
+.nav a:link,
+.nav a:visited {
     display: block;
-    color: #0074D9;
+    color: #526d8a;
     text-decoration: none;
 }
+
+.nav a:hover,
+.nav a:focus,
+.nav a:active,
+.nav .nav-current,
+.nav .nav-current:link,
+.nav .nav-current:visited {
+    background-color: #fff;
+    color: #526d8a;
+}
+
 
 .button {
     text-align: center;
